--- a/lab02/CMakeLists.txt
+++ b/lab02/CMakeLists.txt
@@ -3,6 +3,7 @@ project(lab02)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
 
 include(FetchContent)
 FetchContent_Declare(
